--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
 spyne==2.13.2-alpha
 requests==2.20.1
 mod-wsgi==4.6.8
-#Django==2.2.7
-Django==2.1.*
-
+Django==2.2.24
 
 lxml==4.2.5
 suds-py3==1.3.4.0
